--- a/index.html
+++ b/index.html
@@ -401,42 +401,49 @@
 						}
 						
 						if (film.synopsis) {
-							const synopsisContainer = document.createElement("div");
-							synopsisContainer.className = "synopsis-container";
+  							const synopsisContainer = document.createElement("div");
+  							synopsisContainer.className = "synopsis-container";
 
-							// Extraire les passages entre **...**
-							const importantMatches = [...film.synopsis.matchAll(/\*\*(.*?)\*\*/g)];
-							const importantText = importantMatches.map(match => match[1]).join(" — ");
+  							// Extraire les passages entre **...**
+  							const importantMatches = [...film.synopsis.matchAll(/\*\*(.*?)\*\*/g)];
+  							const importantText = importantMatches.map(match => match[1]).join(" — ");
 
-							// Nettoyer le synopsis (retirer les **...**)
-							const cleanedSynopsis = film.synopsis.replace(/\*\*(.*?)\*\*/g, "");
+  							// Nettoyer le synopsis
+  							const cleanedSynopsis = film.synopsis.replace(/\*\*(.*?)\*\*/g, "");
 
-							// Créer le bloc important si nécessaire
-							if (importantText) {
-  								const importantBlock = document.createElement("div");
-  								importantBlock.className = "synopsis-important";
-  								importantBlock.textContent = importantText;
-  								synopsisContainer.appendChild(importantBlock);
-							}
+  							// Bloc important
+  							if (importantText) {
+    							const importantBlock = document.createElement("div");
+    							importantBlock.className = "synopsis-important";
+    							importantBlock.textContent = importantText;
+    							synopsisContainer.appendChild(importantBlock);
+  							}
 
-							// Créer le paragraphe synopsis
-							const synopsisText = document.createElement("p");
-							synopsisText.className = "synopsis-text clamp";
-							synopsisText.textContent = cleanedSynopsis;
+  							// Texte synopsis
+  							const synopsisText = document.createElement("p");
+  							synopsisText.className = "synopsis-text clamp";
+  							synopsisText.textContent = cleanedSynopsis;
 
-							// Créer l’icône ▼▲
-							const toggleIcon = document.createElement("span");
-							toggleIcon.className = "toggle-icon";
-							toggleIcon.innerHTML = "▼";
-							toggleIcon.addEventListener("click", () => {
-  								synopsisText.classList.toggle("clamp");
-  								toggleIcon.innerHTML = synopsisText.classList.contains("clamp") ? "▼" : "▲";
-							});
+  							// Icône toggle
+  							const toggleIcon = document.createElement("span");
+  							toggleIcon.className = "toggle-icon";
+  							toggleIcon.innerHTML = "▼";
 
-							// Assembler
-							synopsisContainer.appendChild(synopsisText);
-							synopsisContainer.appendChild(toggleIcon);
-							details.appendChild(synopsisContainer);
+  							// Comportement local au bloc
+  							toggleIcon.addEventListener("click", () => {
+    							const isClamped = synopsisText.classList.toggle("clamp");
+    							toggleIcon.innerHTML = isClamped ? "▼" : "▲";
+    							toggleIcon.setAttribute("aria-expanded", String(!isClamped));
+    							toggleIcon.classList.toggle("rotated", !isClamped);
+  							});
+
+  							toggleIcon.setAttribute("role", "button");
+  							toggleIcon.setAttribute("aria-expanded", "false");
+
+  							// Assembler
+  							synopsisContainer.appendChild(synopsisText);
+  							synopsisContainer.appendChild(toggleIcon);
+  							details.appendChild(synopsisContainer);
 						}
 
 						card.appendChild(details);
