--- a/index.html
+++ b/index.html
@@ -425,18 +425,19 @@
   							synopsisText.textContent = cleanedSynopsis;
 
   							// Icône toggle
-  							const toggleIcon = document.createElement("span");
-  							toggleIcon.className = "toggle-icon";
-  							toggleIcon.innerHTML = "▼";
+							const toggleIcon = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+							toggleIcon.setAttribute("class", "toggle-icon");
+							toggleIcon.setAttribute("width", "16");
+							toggleIcon.setAttribute("height", "16");
+							toggleIcon.setAttribute("viewBox", "0 0 24 24");
+							toggleIcon.innerHTML = `<path d="M8 10l4 4 4-4" fill="none" stroke="#000" stroke-width="2"/>`;
 
-  							// Comportement local au bloc
-  							toggleIcon.addEventListener("click", () => {
-    							const isClamped = synopsisText.classList.toggle("clamp");
-    							toggleIcon.innerHTML = isClamped ? "▼" : "▲";
-    							toggleIcon.setAttribute("aria-expanded", String(!isClamped));
-    							toggleIcon.classList.toggle("rotated", !isClamped);
-  							});
-
+							toggleIcon.addEventListener("click", () => {
+  								const isClamped = synopsisText.classList.toggle("clamp");
+  								toggleIcon.classList.toggle("rotated", !isClamped);
+  								toggleIcon.setAttribute("aria-expanded", String(!isClamped));
+							});
+							
   							toggleIcon.setAttribute("role", "button");
   							toggleIcon.setAttribute("aria-expanded", "false");
 
