--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
   							// Assembler
   							synopsisContainer.appendChild(synopsisText);
-  							synopsisContainer.appendChild(toggleIcon);
+  							synopsisContainer.appendChild(triangle);
   							details.appendChild(synopsisContainer);
 						}
 
