--- a/index.html
+++ b/index.html
@@ -404,27 +404,14 @@
   							const synopsisContainer = document.createElement("div");
   							synopsisContainer.className = "synopsis-container";
 
-  							// Extraire les passages entre **...**
-  							const importantMatches = [...film.synopsis.matchAll(/\*\*(.*?)\*\*/g)];
-  							const importantText = importantMatches.map(match => match[1]).join(" — ");
+  							// Convertir **...** en <strong>...</strong>
+  							const formattedSynopsis = film.synopsis.replace(/\*\*(.*?)\*\*/g, "<strong>$1</strong>");
 
-  							// Nettoyer le synopsis
-  							const cleanedSynopsis = film.synopsis.replace(/\*\*(.*?)\*\*/g, "");
-
-  							// Bloc important
-  							if (importantText) {
-    							const importantBlock = document.createElement("div");
-    							importantBlock.className = "synopsis-important";
-    							importantBlock.textContent = importantText;
-    							synopsisContainer.appendChild(importantBlock);
-  							}
-
-  							// Texte synopsis
+  							// Créer le paragraphe synopsis
   							const synopsisText = document.createElement("p");
   							synopsisText.className = "synopsis-text";
-  							synopsisText.textContent = cleanedSynopsis;
+  							synopsisText.innerHTML = formattedSynopsis;
 
-  							// Assembler
   							synopsisContainer.appendChild(synopsisText);
   							details.appendChild(synopsisContainer);
 						}
