--- a/index.html
+++ b/index.html
@@ -283,6 +283,8 @@
  						const card = document.createElement("div");
 						card.className = "card";
 
+						card.style.backgroundImage = `url(${film.posterUrl})`;
+
 						const poster = document.createElement("div");
 						poster.className = "poster";
 
