--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
 <header>
 <a href="https://www.cine-flash.com/">
-<img alt="Cinéma centre-ville Laser par BARCO" id="banner" src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726"/>
+<img alt="Cinéma centre-ville Laser par BARCO" id="banner" src="./ccv-banner.png"/>
 </a>
 </header>
 <main>
