--- a/index.html
+++ b/index.html
@@ -417,19 +417,41 @@
 						
 						if (film.synopsis) {
   							const synopsisContainer = document.createElement("div");
-  							synopsisContainer.className = "synopsis-container";
+  							synopsisContainer.className = "synopsis";
 
-  							// Convertir **...** en <strong>...</strong>
-  							const formattedSynopsis = film.synopsis
-  								.replace(/\*\*(.*?)\*\*/g, "<strong>$1</strong>")
-  								.replace(/\n/g, "<br>");
+  							// Trouver tous les passages entre **...**
+  							const highlightMatches = [...film.synopsis.matchAll(/\*\*(.*?)\*\*/g)];
+  							const highlightedTexts = highlightMatches.map(match => match[1]);
 
-  							// Créer le paragraphe synopsis
+  							// Nettoyer le synopsis : retirer tous les **...**
+  							const cleanedSynopsis = film.synopsis
+    							.replace(/\*\*(.*?)\*\*/g, "") // retirer les **...**
+    							.replace(/\n/g, "<br>");
+
+  							// Créer les éléments pour chaque texte mis en évidence
+  							highlightedTexts.forEach(text => {
+    							const highlight = document.createElement("p");
+    							highlight.className = "synopsis-highlight";
+    							highlight.innerHTML = `<strong>${text}</strong>`;
+    							synopsisContainer.appendChild(highlight);
+  							});
+
+  							// Créer le paragraphe tronqué
   							const synopsisText = document.createElement("p");
   							synopsisText.className = "synopsis-text";
-  							synopsisText.innerHTML = formattedSynopsis;
-
+  							synopsisText.innerHTML = cleanedSynopsis;
   							synopsisContainer.appendChild(synopsisText);
+
+  							// Ajouter la flèche
+  							const toggleArrow = document.createElement("span");
+  							toggleArrow.className = "toggle-arrow";
+  							toggleArrow.innerHTML = "&#x25BC;";
+  							toggleArrow.addEventListener("click", function () {
+    							synopsisContainer.classList.toggle("expanded");
+    							toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? "&#x25B2;" : "&#x25BC;";
+  							});
+  							synopsisContainer.appendChild(toggleArrow);
+
   							details.appendChild(synopsisContainer);
 						}
 
