--- a/index.html
+++ b/index.html
@@ -459,6 +459,16 @@
   							// Ajouter les highlights avant
   							highlightsBefore.forEach(el => synopsisContainer.appendChild(el));
 
+							const downArrowSVG = `
+							<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+  							<path d="M4 6L8 10L12 6" stroke="currentColor" stroke-width="2"/>
+							</svg>`;
+
+							const upArrowSVG = `
+							<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+  								<path d="M4 10L8 6L12 10" stroke="currentColor" stroke-width="2"/>
+							</svg>`;
+
   							// Créer le paragraphe tronqué
   							const synopsisText = document.createElement("p");
   							synopsisText.className = "synopsis-text";
@@ -469,14 +479,20 @@
     							synopsisContainer.classList.add("truncated");
 
   								// Ajouter la flèche
-  								const toggleArrow = document.createElement("span");
-  								toggleArrow.className = "toggle-arrow";
-  								toggleArrow.innerHTML = "&#x25BC;";
+								toggleArrow.innerHTML = downArrowSVG;
+								toggleArrow.addEventListener("click", function () {
+  									synopsisContainer.classList.toggle("expanded");
+  									toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? upArrowSVG : downArrowSVG;
+								});
+
+  								//const toggleArrow = document.createElement("span");
+  								//toggleArrow.className = "toggle-arrow";
+  								//toggleArrow.innerHTML = "&#x25BC;";
 								// toggleArrow.innerHTML = "&#x02C5;";
-  								toggleArrow.addEventListener("click", function () {
-	    							synopsisContainer.classList.toggle("expanded");
-    								toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? "&#x25B2;" : "&#x25BC;";
-  								});
+  								//toggleArrow.addEventListener("click", function () {
+	    						//	synopsisContainer.classList.toggle("expanded");
+    							//	toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? "&#x25B2;" : "&#x25BC;";
+  								//});
   								synopsisContainer.appendChild(toggleArrow);
 								
 						  	} else {
