--- a/index.html
+++ b/index.html
@@ -452,23 +452,9 @@
   							// Nettoyer les sauts de ligne
   							cleanedSynopsis = cleanedSynopsis.replace(/\n/g, "<br>");
 
-							// Estimer le nombre de lignes
-  							const lineCount = (originalText.match(/\n/g) || []).length + 1;
-  							const shouldTruncate = lineCount >= 8;
-
   							// Ajouter les highlights avant
   							highlightsBefore.forEach(el => synopsisContainer.appendChild(el));
 							
-							const downArrowSVG = `
-							<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-  								<path d="M4 6L8 10L12 6" stroke="currentColor" stroke-width="2"/>
-							</svg>`;
-
-							const upArrowSVG = `
-							<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-  								<path d="M4 10L8 6L12 10" stroke="currentColor" stroke-width="2"/>
-							</svg>`;
-
   							// Créer le paragraphe tronqué
   							const synopsisText = document.createElement("p");
   							synopsisText.className = "synopsis-text";
@@ -479,27 +465,16 @@
     							synopsisContainer.classList.add("truncated");
 
   								// Ajouter la flèche
-								const toggleArrow = document.createElement("span");
-								toggleArrow.className = "toggle-arrow";
-								toggleArrow.innerHTML = downArrowSVG;
-								toggleArrow.addEventListener("click", function () {
-  									synopsisContainer.classList.toggle("expanded");
-  									toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? upArrowSVG : downArrowSVG;
-								});
-
-  								//const toggleArrow = document.createElement("span");
-  								//toggleArrow.className = "toggle-arrow";
-  								//toggleArrow.innerHTML = "&#x25BC;";
+  								const toggleArrow = document.createElement("span");
+  								toggleArrow.className = "toggle-arrow";
+  								toggleArrow.innerHTML = "&#x25BC;";
 								// toggleArrow.innerHTML = "&#x02C5;";
-  								//toggleArrow.addEventListener("click", function () {
-	    						//	synopsisContainer.classList.toggle("expanded");
-    							//	toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? "&#x25B2;" : "&#x25BC;";
-  								//});
-  								synopsisContainer.appendChild(toggleArrow);
+  								toggleArrow.addEventListener("click", function () {
+	    							synopsisContainer.classList.toggle("expanded");
+    								toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? "&#x25B2;" : "&#x25BC;";
+  								});
 								
-						  	} else {
-    							synopsisContainer.classList.add("full");
-  							}
+  							synopsisContainer.appendChild(toggleArrow);
 
   							// Ajouter les highlights après
   							highlightsAfter.forEach(el => synopsisContainer.appendChild(el));
