--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
   							const toggleArrow = document.createElement("span");
 							toggleArrow.className = "toggle-arrow";
   							toggleArrow.innerHTML = "&#x25BC;";
-							 toggleArrow.innerHTML = "&#x02C5;";
+							//toggleArrow.innerHTML = "&#x02C5;";
   							toggleArrow.addEventListener("click", function () {
 	    						synopsisContainer.classList.toggle("expanded");
     							toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? "&#x25B2;" : "&#x25BC;";
