--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
   							const originalText = film.synopsis;
 
   							// Trouver tous les passages entre **...**
-  							const highlightMatches = [...originalText.matchAll(/\*\*(.*?)\*\*/g)];
+							const highlightMatches = [...originalText.matchAll(/\*\*(.*?)\*\*/gs)];
 
   							// Créer une copie du texte sans les **...**
   							let cleanedSynopsis = originalText;
