--- a/index.html
+++ b/index.html
@@ -470,11 +470,12 @@
 							// Ajouter la flèche			
   							const toggleArrow = document.createElement("span");
 							toggleArrow.className = "toggle-arrow";
-  							toggleArrow.innerHTML = "&#x25BC;";
-							//toggleArrow.innerHTML = "&#x02C5;";
+							toggleArrow.innerHTML = "&#x00BB;";
+  							//toggleArrow.innerHTML = "&#x25BC;";
   							toggleArrow.addEventListener("click", function () {
 	    						synopsisContainer.classList.toggle("expanded");
-    							toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? "&#x25B2;" : "&#x25BC;";
+    							//toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? "&#x25B2;" : "&#x25BC;";
+								toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? "&#x00AB;" : "&#x00BB;";
   							});
 								
   							synopsisContainer.appendChild(toggleArrow);
