--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
   							toggleArrow.addEventListener("click", function () {
 	    						synopsisContainer.classList.toggle("expanded");
     							//toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? "&#x25B2;" : "&#x25BC;";
-								toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? "...&#x00AB;" : "...&#x00BB;";
+								toggleArrow.innerHTML = synopsisContainer.classList.contains("expanded") ? ".&#x00AB;" : "...&#x00BB;";
   							});
 								
   							synopsisContainer.appendChild(toggleArrow);
