Update tooltip text for available places

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
   								// Événements de survol
   								horaireLabel.addEventListener("mouseover", (e) => {
     								const places = horaireLabel.getAttribute("data-places");
-    								infopan.textContent = `Places disponibles : ${places}`;
+    								infoSpan.textContent = `${places} Places disponibles`;
     								infoSpan.style.display = "inline";
   								});
 
