Update tooltip text format for availability display

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 								// Crée l'info-bulle
 								const tooltip = document.createElement("span");
 								tooltip.className = "tooltip";
-								tooltip.textContent = `Places disponibles : ${placesDisponibles}`;
+								tooltip.textContent = `${placesDisponibles} Places disponibles`;
 								horaireLabel.appendChild(tooltip);
 								
 								// Sur mobile : clic pour afficher/masquer
