--- a/index.html
+++ b/index.html
@@ -616,6 +616,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 
 </script>
+<script>setTimeout(function(){ location.reload(); }, 300000);</script>
 </body>
 </html>
 
