Comment out mobile tooltip toggle instruction

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 								tooltip.textContent = `${placesDisponibles} Places disponibles`;
 								horaireLabel.appendChild(tooltip);
 								
-								 Sur mobile : clic pour afficher/masquer
+								// Sur mobile : clic pour afficher/masquer
 								if (estMobile()) {
   									horaireLabel.addEventListener("click", () => {
     									const visible = tooltip.style.visibility === "visible";
