Change tooltip text from 'Places' to 'Sièges'

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 								// Crée l'info-bulle
 								const tooltip = document.createElement("span");
 								tooltip.className = "tooltip";
-								tooltip.textContent = `${placesDisponibles} Places disponibles`;
+								tooltip.textContent = `${placesDisponibles} Sièges disponibles`;
 								horaireLabel.appendChild(tooltip);
 								
 								// Sur mobile : clic pour afficher/masquer
