--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 						// console.log(`📅 Aujourd'hui à Toronto : ${aujourdHuiStr}`);
 						// console.log(`⏰ Heure actuelle : ${currentHour}:${currentMinute}`);
 
-						// ✅ Vérifier si le film n'est pas encore sorti ET que la première séance est dans plus de 24h
+						// ✅ Vérifier si le film n'est pas encore sorti
 						if (aujourdHuiStr < film.OpeningDate) {
     						const bande = document.createElement("div");
     						bande.className = "jour-label bientot-affiche-banner";
